# midi-processor-lib

./: CMakeLists.txt  README.md  midi_processor_chan_button_remap.h  midi_processor_chan_mes_remap.h  midi_processor_chan_mes_remap_settings_view.cpp  midi_processor_home_screen.cpp  midi_processor_home_screen.h  midi_processor_manager.cpp  midi_processor_manager.h  midi_processor_mc_fader_pickup.h  midi_processor_no_settings_view.cpp  midi_processor_no_settings_view.h  midi_processor_transpose.h  settings_file.cpp  settings_file.h
